Fix logo height on small screens

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -199,7 +199,6 @@ $spv-navigation-logo-bottom-position: 0.125rem; // 2px when 1rem is 16px
   .p-navigation__logo {
     display: flex;
     flex: 0 0 auto;
-    height: $navigation-logo-size;
     margin: 0 $sph--large 0 0;
 
     @media (min-width: $breakpoint-navigation-threshold) {
